--- a/modules/frontend/src/js/pages/Grid.css
+++ b/modules/frontend/src/js/pages/Grid.css
@@ -1,7 +1,7 @@
 .ag-theme-material {
     --ag-header-height: 30px;
     --ag-header-foreground-color: #38003c;
-    --ag-selected-row-background-color: #00ff85;
+    --ag-selected-row-background-color: #04f5ff;
 }
 .ag-theme-material .ag-header-group-cell {
     font-weight: bold;
@@ -11,7 +11,7 @@
 .ag-theme-alpine {
     --ag-header-height: 30px;
     --ag-header-foreground-color: #38003c;
-    --ag-selected-row-background-color: #00ff85;
+    --ag-selected-row-background-color: #04f5ff;
 }
 .ag-theme-alpine .ag-header-group-cell {
     font-weight: bold;
